Only 2 linked group instances can add the group. <Broken after 2.67a> #36383

Closed
opened 2013-08-05 12:03:24 +02:00 by Petri Pohjanmies · 8 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bit Nvidia Gtx560

- Blender version with error, and version that worked ---

2.68-r58917 Library instances cannot grouped after 2 objects. (does not work official 2.68a too)
2.67a and previous, You can add library instance to groups without problems.

- Short description of error ---

Cannot add more than 2 library linked group instances with object properties ui-panels [Add to group]. With group menu [Object->Group->Add to active group] this will work?
It Produce error:(Could not add the group because depency cycles detected)
I am not sure is produce really some kind depency cycles with grouping librarylinked groups) But they are work before and they still work if I make them group with objects group menu..

Get both files, and load Groupingfailure.blend and try add fourth cube to existing Group. We can add only 2 instances on time.

%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit Nvidia Gtx560 - Blender version with error, and version that worked --- 2.68-r58917 Library instances cannot grouped after 2 objects. (does not work official 2.68a too) 2.67a and previous, You can add library instance to groups without problems. - Short description of error --- Cannot add more than 2 library linked group instances with object properties ui-panels [Add to group]. With group menu [Object->Group->Add to active group] this will work? It Produce error:(Could not add the group because depency cycles detected) I am not sure is produce really some kind depency cycles with grouping librarylinked groups) But they are work before and they still work if I make them group with objects group menu.. - Get both files, and load Groupingfailure.blend and try add fourth cube to existing Group. We can add only 2 instances on time. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Ookay, new information. Atttached grouping failure demo Crashes while loading any version. I try to reproduce this error. When I test this before everything goes fine, except error to make object group. But now loading Groupingfailure.blend crashes all versions and seems crash Burster too.

This problem started when try to make group linked library instances and then save and load this few times. Then we have a dead .blend file.
This is serious becouse we have heavily linked library project.

%%%

%%%Ookay, new information. Atttached grouping failure demo Crashes while loading any version. I try to reproduce this error. When I test this before everything goes fine, except error to make object group. But now loading Groupingfailure.blend crashes all versions and seems crash Burster too. This problem started when try to make group linked library instances and then save and load this few times. Then we have a dead .blend file. This is serious becouse we have heavily linked library project. %%%

%%%I found previous version from .blend1 that present original situation. I attached it named Groupingfailure_notcrashed.blend. Then I remove objects from group and add them back before I have dead file. I cannot replicate crash file again, but proves something is wrong in this.

Happy bughunting anyway.
%%%

%%%I found previous version from .blend1 that present original situation. I attached it named Groupingfailure_notcrashed.blend. Then I remove objects from group and add them back before I have dead file. I cannot replicate crash file again, but proves something is wrong in this. Happy bughunting anyway. %%%

%%%Regarding the crash, files saved between revision 58855 and 58959 may crash when opened in Blender version before 58855. That's caused by an unfortunate bug between those revisions, you can resave the files with a Blender with revision 58959 or newer, then they should open fine in any Blender version again.%%%

%%%Regarding the crash, files saved between revision 58855 and 58959 may crash when opened in Blender version before 58855. That's caused by an unfortunate bug between those revisions, you can resave the files with a Blender with revision 58959 or newer, then they should open fine in any Blender version again.%%%

%%%Correction, you may need to open the file in Blender revision 59001 or newer to resave the file and fix the issue.%%%

%%%Correction, you may need to open the file in Blender revision 59001 or newer to resave the file and fix the issue.%%%

%%%Fixed the dependency cycle message now in revision 59002, it is indeed valid to the object to the group in this case.%%%

%%%Fixed the dependency cycle message now in revision 59002, it is indeed valid to the object to the group in this case.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Fantastic news. Thanks for correcting this.%%%

%%%Fantastic news. Thanks for correcting this.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36383
No description provided.