Fix #36383: add object to group check for dependency cycles did not work correctly when the group contained two objects duplicating the same group. Also added the dependency check to the "add to active group" operator now for consistency.